--- a/action.yml
+++ b/action.yml
@@ -34,6 +34,9 @@ inputs:
 
 runs:
   using: "composite"
+  environment:
+    name: github-pages
+    url: ${{ steps.deployment.outputs.page_url }}
   steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -81,10 +84,6 @@ runs:
 
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
-
-    # environment:
-    #   name: github-pages
-    #   url: ${{ steps.deployment.outputs.page_url }}
 
     - name: Deploy to GitHub Pages
       id: deployment
