--- a/action.yml
+++ b/action.yml
@@ -4,10 +4,12 @@ name: Build and Deploy Jekyll with GitHub Actions
 #   workflow_call:
 inputs:
   use_ruby_version:
+    description: is it needed...?
     required: false
     default: false
     # type: string
   use_gemfile:
+    description: is it needed...?
     required: false
     default: false
     # type: string
@@ -37,6 +39,9 @@ runs:
   steps:
     - name: Checkout
       uses: actions/checkout@v4
+
+    - name: debug
+      run: echo "${{ inputs.use_ruby_version }}"
 
     # - if: ${{ !(inputs.use_ruby_version == 'true' && inputs.use_gemfile == 'true') }}
     - name: Check out workflow repo
