--- a/action.yml
+++ b/action.yml
@@ -42,6 +42,7 @@ runs:
 
     - name: debug
       run: echo "${{ inputs.use_ruby_version }}"
+      shell: sh
 
     # - if: ${{ !(inputs.use_ruby_version == 'true' && inputs.use_gemfile == 'true') }}
     - name: Check out workflow repo
