use jekyll-gh-pages.yml from deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,15 +20,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: action
-        uses: noraworld/github-actions-sandbox@main
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: noraworld/github-actions-sandbox/.github/workflows/jekyll-gh-pages.yml@main
