specify use_ruby_version & use_gemfile

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -27,6 +27,9 @@ jobs:
     steps:
       - name: action
         uses: noraworld/github-actions-sandbox@main
+        with:
+          use_ruby_version: ${{ inputs.use_ruby_version }}
+          use_gemfile: ${{ inputs.use_gemfile }}
 
   deploy:
     needs: build
