--- a/action.yml
+++ b/action.yml
@@ -40,7 +40,8 @@ runs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Check if tmp directory is excluded in _config.yml
+    - if: ${{ !(inputs.use_ruby_version == 'true' && inputs.use_gemfile == 'true') }}
+      name: Check if tmp directory is excluded in _config.yml
       run: |
         if ! sed -n '/^exclude:/,/^[^[:space:]]/p' _config.yml | grep -qE '^\s*-\s*tmp'; then
           echo "Error: tmp is not excluded in _config.yml" >&2
