--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,5 @@
+# uses
+
 name: Build and Deploy Jekyll with GitHub Actions
 
 on:
@@ -9,6 +11,6 @@ on:
 jobs:
   build_and_deploy:
     uses: noraworld/github-actions-sandbox/.github/workflows/jekyll-gh-pages.yml@main
-    # with:
-    #   use_ruby_version: true
-    #   use_gemfile: true
+    with:
+      use_ruby_version: false
+      use_gemfile: false
