do not exit even if tmp is not excluded

--- a/action.yml
+++ b/action.yml
@@ -22,7 +22,7 @@ runs:
       run: |
         if ! sed -n '/^exclude:/,/^[^[:space:]]/p' _config.yml | grep -qE '^\s*-\s*tmp'; then
           echo "Error: tmp is not excluded in _config.yml" >&2
-          exit 1
+          exit 0 # exit 1
         fi
       shell: sh
 
