only deploy to Pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,4 @@
-# uses
-
-name: Build and Deploy Jekyll with GitHub Actions
+name: Build and Deploy
 
 on:
   push:
@@ -8,9 +6,23 @@ on:
       - main
   workflow_dispatch:
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: pages
+  cancel-in-progress: false
+
 jobs:
-  build_and_deploy:
-    uses: noraworld/github-actions-sandbox/.github/workflows/jekyll-gh-pages.yml@main
-    with:
-      use_ruby_version: false
-      use_gemfile: false
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
