--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
+        with:
+          path: /
 
   deploy:
     needs: build
