--- a/.github/workflows/4.yml
+++ b/.github/workflows/4.yml
@@ -17,7 +17,10 @@ jobs:
           echo "join(toJson(github.event.issue.labels.*.name)): ${{ join(toJson(github.event.issue.labels.*.name)) }}"
           echo "join(github.event.issue.labels.*.name): ${{ join(github.event.issue.labels.*.name) }}"
           echo "contains(join(github.event.issue.labels.*.name), 'bug'): ${{ contains(join(github.event.issue.labels.*.name), 'bug') }}"
-          echo "contains(join(toJson(github.event.issue.labels.*.name))): ${{ contains(join(toJson(github.event.issue.labels.*.name)), 'bug') }}"
+          echo "contains(join(toJson(github.event.issue.labels.*.name)), 'bug'): ${{ contains(join(toJson(github.event.issue.labels.*.name)), 'bug') }}"
+          echo "contains(github.event.issue.labels, 'bug'): ${{ contains(github.event.issue.labels, 'bug') }}"
+          echo "contains(github.event.issue.labels.*.name, 'bug'): ${{ contains(github.event.issue.labels.*.name, 'bug') }}"
+          echo "contains(toJson(github.event.issue.labels.*.name), 'bug'): ${{ contains(toJson(github.event.issue.labels.*.name), 'bug') }}"
 
       # - name: Store ✅ if the label "foo" exists, otherwise store ❌
       #   run: |
