fo instead of foo (partial match)

--- a/.github/workflows/4.yml
+++ b/.github/workflows/4.yml
@@ -11,9 +11,16 @@ jobs:
     steps:
       - name: variable test
         run: |
-          echo "github.event.issue.state: ${{ github.event.issue.state }}"
-          echo "github.event.label.name: ${{ github.event.label.name }}"
-          echo "contains(github.event.issue.labels.*.name, 'foo'): ${{ contains(github.event.issue.labels.*.name, 'foo') }}"
+          echo "github.event.issue.labels: ${{ github.event.issue.labels }}"
+          echo "github.event.issue.labels.*.name: ${{ github.event.issue.labels.*.name }}"
+          echo "toJson(github.event.issue.labels.*.name): ${{ toJson(github.event.issue.labels.*.name) }}"
+          echo "join(toJson(github.event.issue.labels.*.name)): ${{ join(toJson(github.event.issue.labels.*.name)) }}"
+          echo "join(github.event.issue.labels.*.name): ${{ join(github.event.issue.labels.*.name) }}"
+          echo "contains(join(github.event.issue.labels.*.name), 'fo'): ${{ contains(join(github.event.issue.labels.*.name), 'fo') }}"
+          echo "contains(join(toJson(github.event.issue.labels.*.name)), 'fo'): ${{ contains(join(toJson(github.event.issue.labels.*.name)), 'fo') }}"
+          echo "contains(github.event.issue.labels, 'fo'): ${{ contains(github.event.issue.labels, 'fo') }}"
+          echo "contains(github.event.issue.labels.*.name, 'fo'): ${{ contains(github.event.issue.labels.*.name, 'fo') }}"
+          echo "contains(toJson(github.event.issue.labels.*.name), 'fo'): ${{ contains(toJson(github.event.issue.labels.*.name), 'fo') }}"
 
       # - name: Store ✅ if the label "foo" exists, otherwise store ❌
       #   run: |
