--- a/.github/workflows/dispatch-inputs-log-test.yml
+++ b/.github/workflows/dispatch-inputs-log-test.yml
@@ -12,16 +12,4 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '21.6.2'
-
-      - name: Investigate
-        run: node dispatch-inputs-log-test.js
-        shell: sh
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      - uses: noraworld/github-actions-sandbox/.github/workflows/dispatch-inputs-call.yml@main
