--- a/.github/workflows/dispatch-inputs-log-test.yml
+++ b/.github/workflows/dispatch-inputs-log-test.yml
@@ -9,7 +9,5 @@ on:
         type: string
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: noraworld/github-actions-sandbox/.github/workflows/dispatch-inputs-call.yml@main
+  dispatch-inputs-call:
+    - uses: noraworld/github-actions-sandbox/.github/workflows/dispatch-inputs-call.yml@main
