--- a/.github/workflows/dispatch-inputs-log-test.yml
+++ b/.github/workflows/dispatch-inputs-log-test.yml
@@ -10,4 +10,4 @@ on:
 
 jobs:
   dispatch-inputs-call:
-    - uses: noraworld/github-actions-sandbox/.github/workflows/dispatch-inputs-call.yml@main
+    uses: noraworld/github-actions-sandbox/.github/workflows/dispatch-inputs-call.yml@main
