--- a/.github/workflows/child.yml
+++ b/.github/workflows/child.yml
@@ -14,6 +14,9 @@ jobs:
     outputs:
       should_run_bar: ${{ steps.check.outputs.should_run }}
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+
       - name: Run Python and capture output
         id: check
         run: |
