--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,35 +4,15 @@ on:
   workflow_dispatch:
 
 jobs:
-  call-child:
-    uses: noraworld/github-actions-sandbox/.github/workflows/child.yml@main
-    # with: {}  # inputs があるならここに指定
-    # secrets: inherit  # 必要なら
+  daily-report-day-off:
+    uses: noraworld/diary-templates-assistant/.github/workflows/day-off.yml@main
+    with:
+      fail_if_day_off: false
+      gh_output_format: true
+      timezone: 'Asia/Tokyo'
 
-  bar:
-    needs: call-child
-    if: needs.call-child.outputs.should_run_bar == 'true'
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Running bar!"
-
-  baz:
-    needs: bar
-    if: needs.call-child.outputs.should_run_bar == 'true'
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Running baz!"
-
-  qux:
-    needs: baz
-    if: needs.call-child.outputs.should_run_bar == 'true'
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Running qux!"
-
-  quux:
-    needs: qux
-    if: needs.call-child.outputs.should_run_bar == 'true'
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Running quux!"
+  check-if-skipped:
+    needs: daily-report-day-off
+    if: needs.daily-report-day-off.outputs.day_off == 'false'
+    run: |
+      echo "it works!"
