--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -49,13 +49,14 @@ jobs:
           fold_threshold: 0
           fold_summary: ここをクリックすると展開できます
           title_prefix_for_issue: 🐯
-          with_date: true
+          # with_date: true
           timezone: Asia/Tokyo
           time_format: h:mm a · MMM d, yyyy (ZZZZ)
           with_header: "---\r\nid: <NUMBER>\r\ntitle: <TITLE>\r\nassignees: <ASSIGNEES>\r\nlabels: <LABELS>\r\ncreated_at: <CREATED_AT>\r\n---"
           with_title: true
           custom_title: ${{ env.TITLE }}
           # with_quote: issue
+          with_hr: ""
           # skip_body: "file, issue"
           # personal_access_token: GH_TOKEN
         env:
