--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,8 @@ jobs:
       file_pairs_json: ${{ steps.set-pairs.outputs.file_pairs_json }}
     steps:
       - uses: actions/checkout@v4
+        with:
+            fetch-depth: 0
 
       - id: set-pairs
         run: |
