--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,6 +84,11 @@ jobs:
           system_prompt: |
             これは日本語で書かれたブログ記事です。この記事の英語バージョンを作成したいので自然な英語に訳してください。
             先頭の --- で囲まれた YAML に関しては title と description のみを英訳し、それ以外はそのまま出力してください。
+            本文の中にある、コードブロックで囲まれた部分、画像、URL はそのまま出力してください。
+            本文の最初（YAML の直後）に以下の文言を入れてください。
+            This article was automatically translated from Japanese to English by ChatGPT.
+            Please note that some nuances or information may not be accurately reflected.
+            上記は一文ごとに改行されていますが、実際に結果を出力する際は文と文の間にスペースを入れて一行にまとめて表示してください。
             なお、レスポンスをそのままファイルに保存するため、「わかりました」などの返答は一切しないでください。
           user_prompt: ${{ env.USER_PROMPT }}
           output_file: ${{ matrix.pair.output }}
