change to workflow_dispatch

--- a/.github/workflows/4.yml
+++ b/.github/workflows/4.yml
@@ -1,9 +1,11 @@
 name: 4
 
+# on:
+#   issues:
+#     types:
+#       - labeled
 on:
-  issues:
-    types:
-      - labeled
+  workflow_dispatch:
 
 jobs:
   build:
