--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,6 +66,8 @@ jobs:
       matrix:
         pair: ${{ fromJson(needs.collect.outputs.file_pairs_json) }}
     steps:
+      - uses: actions/checkout@v4
+
       - name: Create a todo task as completed
         run: |
           # Get a blog title
